0.07

0.06 2024-11-14T00:48:58+01:00
 - Add tests.
 - Fix minimal dependency to MARC::Leader.
 - Rewrite code to use help() function in tests.

0.05 2024-09-18T15:10:27+02:00
 - Fix test running on shell which has set env variable COLOR=1.

0.04 2024-01-12T09:42:43+01:00
 - Add test for decoding from string.
 - Fix decoding without description.

0.03 2024-01-11T22:35:35+01:00
 - Add test for processing of leader.
 - Fix examples in doc.
 - Simplify examples in doc.
 - Update copyright years.

0.02 2023-11-20T14:09:54+01:00
 - Add support of ANSI color output.

0.01 2023-11-19T21:07:25+01:00
 - First version.