@@ -29,6 +29,12 @@ sub new {
 sub run {
 	my $self = shift;
 
+	my $marc_leader;
+	# XXX Naive detect of MARC leader before getopts.
+	if (defined $ARGV[-1] && length($ARGV[-1]) eq 24) {
+		$marc_leader = pop @ARGV;
+	}
+
 	# Process arguments.
 	$self->{'_opts'} = {
 		'a' => undef,
@@ -37,7 +43,7 @@ sub run {
 		'h' => 0,
 	};
 	if (! getopts('adf:h', $self->{'_opts'})
-		|| (! $self->{'_opts'}->{'f'} && @ARGV < 1)
+		|| (! $self->{'_opts'}->{'f'} && ! defined $marc_leader)
 		|| $self->{'_opts'}->{'h'}) {
 
 		print STDERR "Usage: $0 [-a] [-d] [-f marc_xml_file] [-h] [--version] [leader_string]\n";
@@ -50,10 +56,7 @@ sub run {
 		return 1;
 	}
 
-	my $marc_leader;
-	if (! $self->{'_opts'}->{'f'}) {
-		$marc_leader = $ARGV[0];
-	} else {
+	if ($self->{'_opts'}->{'f'}) {
 		my $marc_file = MARC::File::XML->in($self->{'_opts'}->{'f'});
 		# XXX Check
 		$marc_leader = $marc_file->next->leader;
