@@ -1,4 +1,5 @@
 0.07
+ - Fix practical issue with »marc-leader '-----nam-a22------ia4500'«.
 
 0.06 2024-11-14T00:48:58+01:00
  - Add tests.
